@@ -1,3 +1,13 @@
+Thu Nov 06 16:55:25 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/blob1.c src/odbc/unittests/common.c:
+	* src/odbc/unittests/common.h src/odbc/unittests/connect.c:
+	* src/odbc/unittests/connect2.c src/odbc/unittests/error.c:
+	* src/odbc/unittests/test64.c src/odbc/unittests/timeout.c:
+	* src/odbc/unittests/timeout3.c src/odbc/unittests/utf8.c:
+	* src/odbc/unittests/utf8_2.c:
+	- remove CHK and CheckReturn
+	- style update
+
 Thu Nov 06 15:39:50 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/challenge.c: make it compile under VC6
 
@@ -902,4 +912,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2653 2008-11-06 14:39:57 freddy77 Exp $
+$Id: ChangeLog,v 1.2654 2008-11-06 15:56:38 freddy77 Exp $
